--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -9,6 +9,13 @@
 <body>
     
     <div id="sketch-area" class="container"></div>
+    <div id="res-slider">
+        <input type="range" min="1" max="100" value="16" class="slider" id="slider">
+        <p id="slider-value"></p>
+    </div>
+
+
+
     <script src="etch-a-sketch.js"></script>
 </body>
 </html>
